# pygaindalf

./: .gitignore  README.md  conftest.py  pygaindalf.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  ruff.toml  test_pprint.py
.github/: copilot-instructions.md
.github/workflows/: docs.yml
app/components/: __init__.py  base.py  component.py
app/components/agents/: __init__.py  agent.py  base.py  hello_world.py
app/components/component/: __init__.py  component.py  component_config.py  component_meta.py  entrypoint.py
app/components/providers/: __init__.py  base.py  provider.py  type_enum.py
app/config/: __init__.py  args.py  default.py  main.py
app/context/: __init__.py  base_context.py  context_config.py  direct_context.py  sub_context.py
app/logging/: __init__.py
app/portfolio/: __init__.py  manager.py  portfolio.py  root.py
app/portfolio/collections/: __init__.py
app/portfolio/journal/: __init__.py  entity.py  entity_journal.py  journal.py  owner_protocol.py  (+5 more)
app/runtime/: __init__.py  runtime.py  runtime_orchestrator.py
app/state/: manager.py  uid.py
app/util/: __init__.py
data/: example.yaml  hello_world.yaml  import.yaml  import_data.yaml  import_yaml.yaml  test.yaml  test2.yaml
docs/: Makefile  api.rst  conf.py  index.rst
docs/_templates/: custom-class-template.rst  custom-module-template.rst  module.rst
examples/: .gitignore
examples/cgtcalculator_com/: config_input.yaml
examples/config_importer/: config.yaml
examples/fidelity_netbenefits/: config.yaml
examples/forex_annotator/: config.yaml
examples/hello_world/: hello_world.yaml
examples/inclusion/: test.yaml
examples/s104/: config_full.yaml  config_matcher.yaml
examples/trading212/: config.yaml
examples/yaml_importer/: config.yaml  import.yaml
test/: __init__.py  conftest.py  coverage.ini
test/components/: fixture.py  test_component.py
test/portfolio/: conftest.py  test_instrument.py  test_instrument_journal_session.py  test_instrument_sessions.py  test_ledger.py  test_ledger_sessions.py  test_portfolio.py  test_portfolio_sessions.py  test_session.py  test_transaction.py
test/util/: test_generics.py
(+400 files in other folders)
