[project]
name = "pygaindalf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ordered-set>=4.1.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "requests-cache>=1.2.1",
    "requests-ratelimiter>=0.7.0",
    "rich>=14.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "requests-mock>=1.12.1",
]
