[project]
name = "pygaindalf"
authors = [
  {name = "Rui Pinheiro", email = "rui@ruipinheiro.eu"},
]
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = [
    "frozendict>=2.4.6",
    "iso4217>=1.14.20250512",
    "pdfplumber>=0.11.8",
    "pydantic>=2.12.0a1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "requests-cache>=1.2.1",
    "requests-ratelimiter>=0.7.0",
    "rich>=14.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "requests-mock>=1.12.1",
    "sphinx>=8.2.3",
    "sphinx-pyproject>=0.3.0",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-autodoc-typehints>=3.2.0",
    "myst-parser>=4.0.1",
    "linkify-it-py>=2.0.3",
    "pytest-cov>=6.2.1",
    "sybil[pytest]>=9.2.0",
    "ruff>=0.13.2",
    "snakeviz>=2.2.2",
]
